tests/frontend/fail/logical_ops_type.vx
fn logical_fail() -> Tensor<i32> {
  let a = 1;
  let b = 2;
  let c = a < b; // Tensor<Bool>
  return c; // Expected i32, got Bool
}
